@@ -1,2 +1,12 @@
 # Java-Expense-Tracker
 Just a little demo Java Expense Tracker program with a simple UI
+
+Requires Java and JavaFX installation in order to run
+
+use this command for compilation:
+javac --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml -d bin src/*.java
+
+and this one to run the project
+java --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml -cp bin Main
+
+Check the screenshots folder in order to see what the UI looks like.
